[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MapsRelated/MapList/Map_Memories/GUI/MemorySacrifice/MemorySacrificeGUI.gd" type="Script" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="MemorySacrificeGUI" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="ParticlesContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="MainContainer" type="MarginContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 940.0
margin_bottom = 520.0
mouse_filter = 2

[node name="HeaderContainer" type="MarginContainer" parent="MainContainer/VBoxContainer"]
margin_right = 920.0
margin_bottom = 48.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/HeaderContainer"]
margin_right = 920.0
margin_bottom = 48.0

[node name="Header" type="Label" parent="MainContainer/VBoxContainer/HeaderContainer/VBoxContainer"]
margin_right = 920.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "Sacrifice"
align = 1

[node name="Header2" type="Label" parent="MainContainer/VBoxContainer/HeaderContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 920.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Select a type of Memory Sacrifice to receive for your next playthrough."
align = 1

[node name="SacrificeContainer" type="MarginContainer" parent="MainContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 920.0
margin_bottom = 212.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/VBoxContainer/SacrificeContainer"]
margin_right = 920.0
margin_bottom = 160.0
mouse_filter = 2
custom_constants/margin_top = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/SacrificeContainer/MarginContainer"]
margin_top = 150.0
margin_right = 920.0
margin_bottom = 160.0
mouse_filter = 2
custom_constants/separation = 10

[node name="MemorySacrificeHContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/SacrificeContainer/MarginContainer/VBoxContainer"]
margin_left = 460.0
margin_right = 460.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 20

[node name="OtherSlots" type="HBoxContainer" parent="MainContainer/VBoxContainer/SacrificeContainer/MarginContainer/VBoxContainer"]
margin_left = 460.0
margin_top = 10.0
margin_right = 460.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 20

[node name="MiscButtonsContainer" type="MarginContainer" parent="MainContainer"]
margin_left = 20.0
margin_top = 459.0
margin_right = 940.0
margin_bottom = 520.0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/margin_bottom = 30

[node name="SelectLaterButton" parent="MainContainer/MiscButtonsContainer" instance=ExtResource( 3 )]
margin_left = 435.0
margin_right = 485.0
margin_bottom = 31.0
size_flags_horizontal = 6
text_for_label = "Select Later"

[node name="AdvancedButtonWithTooltip" parent="MainContainer/MiscButtonsContainer/SelectLaterButton" index="6"]
about_button_index_trigger = -1001

[connection signal="on_button_released_with_button_left" from="MainContainer/MiscButtonsContainer/SelectLaterButton" to="." method="_on_SelectLaterButton_on_button_released_with_button_left"]
[connection signal="about_tooltip_construction_requested" from="MainContainer/MiscButtonsContainer/SelectLaterButton/AdvancedButtonWithTooltip" to="." method="_on_AdvancedButtonWithTooltip_about_tooltip_construction_requested"]

[editable path="MainContainer/MiscButtonsContainer/SelectLaterButton"]
